week7-hw3 fixed todo text overflow

--- a/homeworks/week7/hw3/style.css
+++ b/homeworks/week7/hw3/style.css
@@ -88,6 +88,19 @@
   background: #fefffc;
 }
 
+.list__content {
+  overflow: auto;
+  flex: 9 1;
+}
+
+.list__text {
+  flex: 9 1;
+}
+
+.list__btns {
+  flex: 1 0 0.5rem;
+}
+
 .finished {
   color: rgba(0, 0, 0, 0.3);
 }
